fix scroll overflow

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -15,6 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    overflow-y: scroll;
 }
 
 h1 {
