--- a/src/styles/masthead.scss
+++ b/src/styles/masthead.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   padding: 20px;
   height: 35px;
+  min-width: 400px;
 }
 
 #relatable {
